+ тестовый парсер для проверки работы с "ошибочными" URL + в случае ошибки OutOfMemoryError вывод сообщения об ошибке (сомнительное решение надо подумать как лучше) * обновлена библиотека bugsense	- 3.0.7 * рефакторинг небольшой * закоментировано логирование OutOfMemoryError (логи показали что url корректны) * для экономии памяти парсеры создаются только для скачивания

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -6,6 +6,8 @@
     <string name="download">Загрузка фотографии...</string>
     <string name="error">Ошибка!</string>
     <string name="isOffline">Передача данных отключена.</string>
+    <string name="isOutOfMemory1">Недостаточно памяти,</string>
+    <string name="isOutOfMemory2">закройте несколько программ :(</string>
     <string name="sources">Источники обоев</string>
     <string name="sourcesSummary">Выберите один из источников обоев</string>
     <string name="tagPhotoEnable">Включить теги</string>
