--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -24,5 +24,5 @@
     <string name="setupDescription">"Выберите 'Фото дня'\r\n в списке программ"</string>
     <string name="errorSaveFileToSD">Ошибка сохранения файла</string>
     <string name="saveFileToSD">Изображение сохранено на SD</string>
-    <string name="noImages">Нет изображений</string>
+    <string name="noImages">Нет сохраненных изображений</string>
 </resources>
