возможно версия 2.3 + в настройках программы добавлен пункт "О программе" с переходом на сайт с описанием и отображением текущей версии * убраны предупреждения из манифеста (android:debuggable вроде как не нужен http://stackoverflow.com/questions/4580595/what-would-happen-if-android-app-is-released-with-debuggable-on/4580630#4580630) - для релиза убран тестовый парсер

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -20,6 +20,13 @@
     <string name="wifiOnlySummary">Скачивать только через Wi-Fi</string>
     <string name="sourcesSettings">Настройки источников обоев</string>
     <string name="networkSettings">Сетевые настройки</string>
+    
+    <!-- о программе -->
+    <string name="catAbout">О программе</string>
+    <string name="howToUse">Как пользоваться</string>
+    <string name="howToUseDescr">Описание программы на сайте разработчика</string>
+    <string name="softwareVersion">Версия программы</string>
+    
     <string name="updateStarted">Процесс загрузки фотографии запущен</string>
     <string name="setupDescription">"Выберите 'Фото дня'\r\n в списке программ"</string>
     <string name="errorSaveFileToSD">Ошибка сохранения файла</string>
