--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,14 @@
     <string name="wifiOnlySummary">Download Wi-Fi only</string>
     <string name="sourcesSettings">Sources settings</string>
     <string name="networkSettings">Network settings</string>
+    
+    <!-- о программе -->
+    <string name="catAbout">About</string>
+    <string name="howToUse">How to use</string>
+    <string name="howToUseDescr">Details about the app</string>
+    <string name="softwareVersion">Software wersion</string>
+    <string name="softwareVersionDescr">2.3</string>
+    
     <string name="updateStarted">Download image started.</string>
     <string name="setupDescription">"Choose 'Photo of the day'\r\n from the list."</string>
     <!-- ============================ -->
