* забыл изменить версию прокраммы в меню "О программе"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
     <string name="app_name">Photo of the day</string>
     <string name="app_name_gallery">Photo of the day - gallery</string>
@@ -20,20 +20,18 @@
     <string name="wifiOnlySummary">Download Wi-Fi only</string>
     <string name="sourcesSettings">Sources settings</string>
     <string name="networkSettings">Network settings</string>
-    
     <!-- о программе -->
     <string name="catAbout">About</string>
     <string name="howToUse">How to use</string>
     <string name="howToUseDescr">Details about the app</string>
     <string name="softwareVersion">Software wersion</string>
-    <string name="softwareVersionDescr">2.3</string>
-    
+    <string name="softwareVersionDescr">2.4</string>
     <string name="updateStarted">Download image started.</string>
     <string name="setupDescription">"Choose 'Photo of the day'\r\n from the list."</string>
     <!-- ============================ -->
     <!--  AppWidget strings           -->
     <!-- ============================ -->
     <string name="errorSaveFileToSD">Error writing data to SD card</string>
-    <string name="saveFileToSD">Image has been saved</string> 
+    <string name="saveFileToSD">Image has been saved</string>
     <string name="noImages">No images</string>
 </resources>
