--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -24,10 +24,14 @@
     <string name="catAbout">О программе</string>
     <string name="howToUse">Как пользоваться</string>
     <string name="howToUseDescr">Описание программы на сайте разработчика</string>
+    <string name="whatsNew">Что нового?</string>
     <string name="softwareVersion">Версия программы</string>
     <string name="updateStarted">Процесс загрузки фотографии запущен</string>
     <string name="setupDescription">"Выберите 'Фото дня'\r\n в списке программ"</string>
     <string name="errorSaveFileToSD">Ошибка сохранения файла</string>
     <string name="saveFileToSD">Изображение сохранено на SD</string>
     <string name="noImages">Нет сохраненных изображений</string>
+    <!-- Добро пожаловать -->
+	<string name="button_back">Назад</string>
+	<string name="button_done">Продолжить</string>
 </resources>
