--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -21,6 +21,7 @@
     <string name="wifiOnlySummary">Скачивать только через Wi-Fi</string>
     <string name="sourcesSettings">Настройки источников обоев</string>
     <string name="networkSettings">Сетевые настройки</string>
+    <string name="install_widget">Изображения могут быть сохранены с помощью виджета Фото дня</string>
     <!-- о программе -->
     <string name="catAbout">О программе</string>
     <string name="howToUse">Как пользоваться</string>
