--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -41,4 +41,5 @@
     <string name="installStart">Запустить</string>
     <string name="installAbout">О программе</string>
     <string name="assets_html_folder">html-ru/</string>
+    <string name="galleryWelcomeText">"Здесь будут сохранены понравившиеся Вам изображения. Их можно сохранить с помощью виджета 'Фото дня'. Теперь возвращайтесь на Рабочий стол и наслаждайтесь изображением."</string>
 </resources>
