+ программный скролинг на на устройствах без скролинга

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -42,4 +42,6 @@
     <string name="installAbout">О программе</string>
     <string name="assets_html_folder">html-ru/</string>
     <string name="galleryWelcomeText">"Здесь будут сохранены понравившиеся Вам изображения. Их можно сохранить с помощью виджета 'Фото дня'. Теперь возвращайтесь на Рабочий стол и наслаждайтесь изображением."</string>
+    <string name="catSrolling">Скролинг</string>
+    <string name="programScrolingPref">Программный скролинг</string>
 </resources>
