--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="installAbout">About</string>
     <string name="assets_html_folder">html/</string>
     <string name="galleryWelcomeText">"Here will be saved images you like. You can save images by widget 'Photo of the day'. Now go to home screen and enjoy picture."</string>
+    <string name="catSrolling">Scrolling</string>
+    <string name="programScrolingPref">Program scrolling</string>
 </resources>
