--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,5 +44,7 @@
     <string name="galleryWelcomeText">"Here will be saved images you like. You can save images by widget 'Photo of the day'. Now go to home screen and enjoy picture."</string>
     <string name="catSrolling">Scrolling</string>
     <string name="programScrolingPref">Program scrolling (beta)</string>
-    <string name="programScrolingPrefSummamry">"Use to enable scrolling wallpapers, when you scroll homescreens (If this functionality doesn't work in Android platform)"</string>
+    <string name="disableScrolingPref">Disable scrolling wallpaper</string>
+    <string name="disableScrolingPrefSummary">Static image on homescreen</string>
+    <string name="programScrolingPrefSummary">"Beta funcionality! Use to enable scrolling wallpapers, when you scroll homescreens (If this functionality doesn't work in Android platform)"</string>
 </resources>
