--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -45,4 +45,6 @@
     <string name="disableScrolingPref">Отключить скролинг обоев</string>
     <string name="disableScrolingPrefSummary">Будет рисоваться статичное изображение</string>
     <string name="programScrolingPrefSummary">Бета-функционал: Используйте для включения скролинга обоев при листании экранов, если Ваше устройство не обладает этой функцией</string>
+    <string name="scrollingEffect">Эффект</string>
+    <string name="scrollingEffectSummary">Графический эффект при достижении края изображения</string>
 </resources>
