--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -41,8 +41,13 @@
     <string name="assets_html_folder">html-ru/</string>
     <string name="galleryWelcomeText">"Здесь будут сохранены понравившиеся Вам изображения. Их можно сохранить с помощью виджета 'Фото дня'. Теперь возвращайтесь на Рабочий стол и наслаждайтесь изображением."</string>
     <string name="catSrolling">Скролинг</string>
-    <string name="programScrolingPref">Программный скролинг (beta)</string>
+    <string name="programScrolingPref">Альтернативный скролинг (beta)</string>
     <string name="disableScrolingPref">Отключить скролинг обоев</string>
     <string name="disableScrolingPrefSummary">Будет рисоваться статичное изображение</string>
-    <string name="programScrolingPrefSummary">Бета-функционал: Используйте для включения скролинга обоев при листании экранов, если Ваше устройство не обладает этой функцией</string>
+    <string name="programScrolingPrefSummary">
+Бета-функционал: Используйте для включения скролинга обоев при листании экранов, если Ваше устройство не обладает этой функцией</string>
+    <string name="scrollingEffect">Скролинг-эффект</string>
+    <string name="scrollingEffectSummary">Графический эффект при достижении края изображения</string>
+    <string name="effectSpring">Отпружинивание</string>
+    <string name="effectJump">Переход на другой край</string>
 </resources>
