--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,4 +55,9 @@
     <string name="effectSpring">Spring</string>
     <string name="numVirtualScreensSummary">Virtual screens count</string>
     <string name="numVirtualScreens">Virtual screens</string>
+    <string name="nullString"></string>
+    <string name="openGallery">Open gallery</string>
+    <string name="saveImage">Save image</string>
+    <string name="nextParser">Next parser</string>
+    <string name="openSettings">Open settings</string>
 </resources>
