+ избранные источники обоев

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -54,9 +54,11 @@
     <string name="effectJump">Переход на другой край</string>
     <string name="numVirtualScreensSummary">Количество виртуальных рабочих столов</string>
     <string name="numVirtualScreens">Рабочие столы</string>
-    <string name="nullString"></string>
+    <string name="nullString"/>
     <string name="openGallery">Открыть галерею</string>
     <string name="saveImage">Сохранить изображение</string>
     <string name="nextParser">Следующий источник</string>
     <string name="openSettings">Настройки</string>
+    <string name="favoriteSources">Избранные источники</string>
+    <string name="favoriteSourcesSummary">Выберите источники обев для автоматической смены и смены источника в виджете</string>
 </resources>
